src/components/sections/Search/Search.scss
@import '../../../styles/abstracts/index';

.c-search {
  position: relative;

  &__input {
    background-color: $color-cinder;
    border: 0;
    border-radius: px-to-rem(3px);
    color: $color-white;
    font-size: $g-font-size-small;
    outline: 0;
    padding: px-to-rem(13px) pad(xsmall);
    width: 100%;
  }

  &__suggestions-container {
    border-radius: px-to-rem(4px);
    color: $secondary-color;
    margin-top: px-to-rem(4px);
    position: absolute;
    right: 0;
    width: 100%;
  }

  &__suggestions-section-title {
    background-color: $color-cinder;
    color: $color-white;
    font-family: $g-font-family-primary;
    font-weight: bold;
    margin: 0;
    padding: pad(2xsmall);
  }

  &__suggestions-list {
    background-color: $color-vapor;
    list-style: none;
    margin: 0;
    padding: 0;
  }

  &__suggestion {
    color: $color-comet;
    font-family: $g-font-family-secondary;
    padding: px-to-rem(6px) pad(2xsmall);
  }

  &__suggestion--highlighted {
    background-color: $primary-color;
    color: $color-white;
    cursor: pointer;
  }
}

